syntax = "proto3";
package pr12er.protos;

message HelloRequest {
}

message HelloResponse {
    string body = 1;
}

service Pr12erService {
    rpc GetHello(HelloRequest) returns (HelloResponse);
}